bugfix/force word wrap when no spaces are used in tweet

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -33,6 +33,7 @@
   border-bottom: 5px solid #54514a;
   padding-bottom: 1em;
   margin-bottom: 0em;
+  word-wrap: break-word;
 }
 
 .all-tweets footer {
